--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -21,7 +21,7 @@
                 <div class="forgot-link">
                    <a href="javascript: void(0)" (click)="forgetPassword()">Forget your password</a>
                 </div>
-                <input type="submit" name="" value="Login" (click)="login(event)">
+                <input type="submit" name="" value="Login" (click)="login()">
              </div>
           </form>
        </div>
