added product css

--- a/src/app/modules/home/portal/portal.component.html
+++ b/src/app/modules/home/portal/portal.component.html
@@ -9,19 +9,19 @@
         <div class="box">
           <div class="inside">
             <h3>My Information</h3>
-            <a href="#" class="border-btn">Edit</a>
+            <a href="javascript: void(0)" [routerLink]="['/home/information']" routerLinkActive="router-link-active"  class="border-btn">Edit</a>
           </div>
         </div>
         <div class="box">
           <div class="inside">
             <h3>Contact</h3>
-            <a href="#" class="border-btn">Edit</a>
+            <a href="javascript: void(0)" class="border-btn">Edit</a>
           </div>
         </div>
         <div class="box">
           <div class="inside">
             <h3>Place an order</h3>
-            <a href="#" class="border-btn">Go</a>
+            <a href="javascript: void(0)" [routerLink]="['/home/product']" class="border-btn">Go</a>
           </div>
         </div>
       </div>
