--- a/src/app/modules/home/information/information.component.html
+++ b/src/app/modules/home/information/information.component.html
@@ -1,63 +1,84 @@
-
 <section class="my-information">
   <div class="container">
     <div class="wrap">
       <div class="title-row">
         <h2>My information | <span class="client-id">Client ID</span></h2>
       </div>
-      <form class="common-form">
+      <form class="common-form" #f="ngForm" [formGroup]="userForm">
         <div class="field-row">
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.name?.errors && isSubmitted}">
             <label>Name</label>
-            <input type="text" name="" required="" value="John Doe">
+            <span class="error-span" *ngIf="(userForm?.controls?.name?.errors && isSubmitted)">
+              Please enter name
+            </span>
+            <input type="text" formControlName="name" name="" required="">
           </div>
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.email?.errors && isSubmitted}">
             <label>Email</label>
-            <input type="Email" name="" value="info@test.com">
+            <span class="error-span" *ngIf="(userForm?.controls?.email?.errors && isSubmitted)">
+              Please enter email
+            </span>
+            <input type="text" formControlName="email" name="" required="">
           </div>
         </div>
         <div class="field-row">
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.password?.errors && isSubmitted}">
             <label>Password</label>
-            <input type="password" name="" required="">
+            <span class="error-span" *ngIf="((userForm?.controls?.password?.errors && isSubmitted) || 
+            ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
+              Please enter password
+            </span>
+            <input type="password" formControlName="password" name="" required="">
           </div>
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.confirmPassword?.errors && isSubmitted}">
             <label>Password confirmation</label>
-            <input type="password" name="" required="">
+            <span class="error-span" *ngIf="((userForm?.controls?.confirmPassword?.errors && isSubmitted) || 
+            ((userForm.value.password !== userForm.value.confirmPassword) && isSubmitted))">
+              Please enter confirm password
+            </span>
+            <input type="password" formControlName="confirmPassword" name="" required="">
           </div>
         </div>
         <div class="field-row">
-          <div class="field-group field-error">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.phone?.errors && isSubmitted}">
             <label>Phone</label>
-            <span class="error-span">error</span>
-            <input type="text" name="" required="">
+            <span class="error-span" *ngIf="(userForm?.controls?.phone?.errors && isSubmitted)">
+              Please enter Phone number
+            </span>
+            <input type="text" formControlName="phone" name="" required="">
           </div>
           <div class="field-group">
             <label>Address</label>
-            <input type="text" name="" required="" value="125 rue de la Pierre">
+            <input type="text" name="" required="" value={{user.address}} disabled>
           </div>
         </div>
         <div class="field-row">
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.postalCode?.errors && isSubmitted}">
             <label>Postal Code</label>
-            <input type="text" name="" required="" value="G4G0A8">
+            <span class="error-span" *ngIf="(userForm?.controls?.postalCode?.errors && isSubmitted)">
+              Please enter Postal code
+            </span>
+            <input type="text" formControlName="postalCode" name="" required="">
           </div>
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.city?.errors && isSubmitted}">
             <label>City</label>
-            <input type="text" name="" required="" value="Québec">
+            <span class="error-span" *ngIf="(userForm?.controls?.city?.errors && isSubmitted)">
+              Please enter city
+            </span>
+            <input type="text" formControlName="city" name="" required="">
           </div>
         </div>
         <div class="field-row">
-          <div class="field-group">
+          <div class="field-group" [ngClass]="{'field-error': userForm?.controls?.companyName?.errors && isSubmitted}">
             <label>Company name</label>
-            <input type="text" name="" required="" value="Global Corporation">
+            <span class="error-span" *ngIf="(userForm?.controls?.companyName?.errors && isSubmitted)">
+              Please enter Company name
+            </span>
+            <input type="text" formControlName="companyName" name="" required="">
           </div>
         </div>
         <div class="bottom-row">
-          <!-- <div class="forgot-link">
-                   <a href="#">Forget your password</a>
-                </div> -->
-          <input type="submit" name="" value="Edit">
+          <input type="submit" name="" value="Edit" (click)="updateUser()">
         </div>
       </form>
 
@@ -65,9 +86,8 @@
         <h2>Account information</h2>
       </div>
 
-      <div class="note">Account representative: John Doe, 418-888-8888</div>
+      <div class="note">Account representative: {{user.name}}, {{user.phone}}</div>
 
     </div>
   </div>
 </section>
-
