--- a/src/app/modules/home/portal/portal.component.html
+++ b/src/app/modules/home/portal/portal.component.html
@@ -21,7 +21,7 @@
         <div class="box">
           <div class="inside">
             <h3>Place an order</h3>
-            <a href="javascript: void(0)" [routerLink]="['/home/product']" class="border-btn">Go</a>
+            <a href="javascript: void(0)" [routerLink]="['/home/products']" class="border-btn">Go</a>
           </div>
         </div>
       </div>
