--- a/src/app/modules/home/information/information.component.html
+++ b/src/app/modules/home/information/information.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="wrap">
       <div class="title-row">
-        <h2>My information | <span class="client-id">Client ID</span></h2>
+        <h2>My information | <span class="client-id">{{user.clientId}}</span></h2>
       </div>
       <form class="common-form" #f="ngForm" [formGroup]="userForm">
         <div class="field-row">
