--- a/src/app/modules/home/products/products.component.html
+++ b/src/app/modules/home/products/products.component.html
@@ -27,7 +27,7 @@
 
           </div>
         </div>
-        <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'add')">Add to
+        <div class="action po-col"><span>Action</span><a href="javascript: void(0)" (click)="updateAddCart(item, 'add_to_cart')">Add to
             cart</a></div>
       </div>
     </div>
