--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -23,12 +23,12 @@
                   </div>
                </div>
             </div>
-            <div class="bottom-row">
+            <!-- <div class="bottom-row">
                <div class="forgot-link">
                   <a href="javascript: void(0)" (click)="forgetPassword()">Forget your password</a>
                </div>
                <input type="submit" name="" value="Login" (click)="login()">
-            </div>
+            </div> -->
          </form>
       </div>
    </div>
