--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
              <div class="logo">
                 <a href="#"><img src="../../../assets/images/logo.svg"></a>
              </div>
-             <div class="nav-toggle"><i></i></div>
+             <div class="nav-toggle" (click)="showNav()"><i></i></div>
              <div class="menu">
                 <ul>
                    <li [routerLink]="['/home/portal']" routerLinkActive="active"><a href="javascript: void(0)"  >Home</a></li>
