--- a/src/app/modules/home/portal/portal.component.html
+++ b/src/app/modules/home/portal/portal.component.html
@@ -12,12 +12,12 @@
             <a href="javascript: void(0)" [routerLink]="['/home/information']" routerLinkActive="router-link-active"  class="border-btn">Edit</a>
           </div>
         </div>
-        <div class="box">
+        <!-- <div class="box">
           <div class="inside">
             <h3>Contact</h3>
             <a href="javascript: void(0)" class="border-btn">Edit</a>
           </div>
-        </div>
+        </div> -->
         <div class="box">
           <div class="inside">
             <h3>Place an order</h3>
