--- a/src/assets/css/developer.css
+++ b/src/assets/css/developer.css
@@ -1,3 +1,17 @@
 .cross-validation-error-message {
   color: #E21F26;
 }
+.select-date-main {padding: 30px 0 0 0;text-align: center;}
+.select-date-main .dp-input-container {width: 215px;}
+.select-date-main .dp-input-container .dp-picker-input {width: 100%;border: 1px solid #ebebeb;border-radius: 0;font-family: Muli;padding: 7px 14px;line-height: 20px;}
+.select-date-main .dp-popup {border: none;box-shadow: none;}
+.select-date-main .dp-current-location-btn {display: none;}
+.select-date-main .dp-popup .dp-nav-header {width: 100%;left: 0;}
+.select-date-main .dp-calendar-nav-container .dp-nav-btns-container {position: static;vertical-align: middle;transform: none;}
+.select-date-main .dp-calendar-nav-container .dp-nav-btns-container .dp-calendar-nav-container-left {position: absolute;left: 8px;top: 5px;}
+.select-date-main .dp-calendar-nav-container .dp-nav-btns-container .dp-calendar-nav-container-right {position: absolute;top: 5px;right: 8px;}
+.dp-calendar-wrapper .dp-weekdays {background: #E21F26;font-size: 11px;}
+.dp-calendar-wrapper .dp-weekdays .dp-calendar-weekday {color: #fff;}
+.select-date-main .dp-calendar-wrapper .dp-calendar-day.dp-current-day {background: #F3F3FC;border: none;border-radius: 3px;-moz-box-shadow: 0px 0px 3px rgba(132, 147, 225, 0.6);-webkit-box-shadow: 0px 0px 3px rgba(132, 147, 225, 0.6);box-shadow: 0px 0px 3px rgba(132, 147, 225, 0.6);position: relative;z-index: 1;}
+.select-date-main .dp-calendar-wrapper .dp-calendar-day {font-size: 11px; border-radius: 3px;}
+.select-date-main .dp-calendar-wrapper .dp-calendar-day.dp-selected {background: #e21f26;}
